added dockerfile and sqlx offline mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,9 @@ features = [
     "macros",
     "postgres",
     "uuid",
-"chrono",
-"migrate"
+    "chrono",
+    "migrate",
+    "offline"
 ]
 
 [dev-dependencies]
