--- a/base.yaml
+++ b/base.yaml
@@ -1,5 +1,6 @@
 # configuration.yaml
-application_port: 8000
+application:
+  port:8000
 database:
   database_name: "newsletter"
   host: "127.0.0.1"
