--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
+serde-aux = "4"
 config = "0.13"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
@@ -16,8 +17,8 @@ tracing = {version = "0.1", features = ["log"]}
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
-secrecy = { version = "0.6", features = ["serde"] }
 tracing-actix-web = "0.7"
+secrecy = { version = "0.6", features = ["serde"] }
 
 [dependencies.sqlx] 
 version = "0.6"
