--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-actix-web = "0.7"
 secrecy = { version = "0.6", features = ["serde"] }
+unicode-segmentation = "1"
+validator = "0.16"
 
 [dependencies.sqlx] 
 version = "0.6"
@@ -36,6 +38,7 @@ features = [
 [dev-dependencies]
 once_cell = "1"
 reqwest = "0.11"
+claims = "0.7"
 
 [lib]
 path = "src/lib.rs"
