--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -6,3 +6,6 @@ database:
   password: "password"
   port: 5432
   username: "postgres"
+email_client:
+  base_url: "localhost"
+  sender_email: "test@gmail.com"
