--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,11 @@ fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+features = ["rustls-tls", "json"]
+
 [dependencies.sqlx] 
 version = "0.6"
 default-features = false 
@@ -39,8 +44,9 @@ features = [
 ]
 
 [dev-dependencies]
+tokio = { version = "1", features = ["macros", "rt"] }
+wiremock = "0.5"
 once_cell = "1"
-reqwest = "0.11"
 claims = "0.7"
 
 [lib]
