added timeout to email client and more tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ features = [
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt"] }
+serde_json = "1"
 wiremock = "0.5"
 once_cell = "1"
 claims = "0.7"
