--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,61 +1,47 @@
 [package]
 name = "zero2prod"
 version = "0.1.0"
+authors = ["PWillumsen"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-thiserror = "1"
-actix-web = "4"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1", features = ["derive"] }
-serde-aux = "4"
-config = "0.13"
-uuid = { version = "1", features = ["v4"] }
-chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
-tracing = {version = "0.1", features = ["log"]}
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
-tracing-bunyan-formatter = "0.3"
-tracing-log = "0.1"
-tracing-actix-web = "0.7"
-secrecy = { version = "0.6", features = ["serde"] }
-unicode-segmentation = "1"
-validator = "0.16"
-fake = "~2.3"
-quickcheck = "0.9.2"
-quickcheck_macros = "0.9.1"
-rand = { version = "0.8", features = ["std_rng"] }
-
-[dependencies.reqwest]
-version = "0.11"
-default-features = false
-features = ["rustls-tls", "json"]
-
-[dependencies.sqlx] 
-version = "0.6"
-default-features = false 
-features = [
-    "runtime-tokio-rustls",
-    "macros",
-    "postgres",
-    "uuid",
-    "chrono",
-    "migrate",
-    "offline"
-]
-
-[dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt"] }
-serde_json = "1"
-wiremock = "0.5"
-once_cell = "1"
-claims = "0.7"
-linkify = "0.9"
-
 [lib]
 path = "src/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
 name = "zero2prod"
+
+[dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1", features = ["derive"] }
+config = "0.13"
+sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+uuid = { version = "1", features = ["v4"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+tracing = {version = "0.1", features = ["log"]}
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
+thiserror = "1"
+serde-aux = "4"
+unicode-segmentation = "1"
+rand = { version = "0.8", features = ["std_rng"] }
+anyhow = "1"
+validator = "0.16"
+tracing-actix-web = "0.7"
+secrecy = { version = "0.8", features = ["serde"] }
+
+[dev-dependencies]
+once_cell = "1"
+claims = "0.7"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
+fake = "~2.3"
+# tokio = { version = "1", features = ["macros", "rt"] }
+wiremock = "0.5"
+serde_json = "1"
+linkify = "0.9"
+
