--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ validator = "0.16"
 tracing-actix-web = "0.7"
 secrecy = { version = "0.8", features = ["serde"] }
 base64 = "0.21"
+sha3 = "0.9"
 
 [dev-dependencies]
 once_cell = "1"
