--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,24 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 config = "0.13"
-sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
-uuid = { version = "1", features = ["v4"] }
+sqlx = { version = "0.6", default-features = false, features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate",
+  "offline",
+] }
+uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
-tracing = {version = "0.1", features = ["log"]}
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
+reqwest = { version = "0.11", default-features = false, features = [
+  "json",
+  "cookies",
+  "rustls-tls",
+] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 thiserror = "1"
@@ -35,6 +47,11 @@ tracing-actix-web = "0.7"
 secrecy = { version = "0.8", features = ["serde"] }
 base64 = "0.21"
 argon2 = { version = "0.4", features = ["std", "password-hash"] }
+urlencoding = "2"
+htmlescape = "0.3"
+actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
+actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
+serde_json = "1"
 
 [dev-dependencies]
 once_cell = "1"
@@ -46,4 +63,3 @@ fake = "~2.3"
 wiremock = "0.5"
 serde_json = "1"
 linkify = "0.9"
-
