--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ actix-web-lab = "0.18"
 [dev-dependencies]
 once_cell = "1"
 claims = "0.7"
+serde_urlencoded = "0.7.1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 fake = "~2.3"
